# ProgDotfiles

./: README.md
C/: CMakeLists.txt  CMakeLists_ForGTest.txt  CMakePresets.json  dotclang-tidy
C++/: CMakeLists.txt  CMakeLists_ForGTest.txt  CMakePresets.json  dotclang-format  dotclang-tidy
VCS/: gitconfig
